# PyStaff

./: .gitignore  MPI_fit_example.py  MPI_fit_example_fixed.py  conda_PyStaff_environment_setup.txt  environment.yml  fit_example.py  inspect_model.py  pyproject.tml  pyproject.toml  requirements.txt  run_pystaff.sh  samples_mpi.txt  tbar_example.py
pystaff/: CvD_SSP_tools.py  SpectralFitting.py  SpectralFitting_functs.py
